# telegram-qt

./: CMakeLists.txt
TelegramQt/: ClientDhLayer.cpp  ClientRpcLayer.cpp  DhLayer.cpp  MessagingApi.cpp  MessagingApi.hpp  TelegramNamespace.cpp
TelegramQt/MTProto/: Stream.cpp  TLRpcDebug.cpp  TLTypesDebug.cpp
clients/qml-client/models/: DialogsModel.cpp
generator/: Generator.cpp
server/: CMakeLists.txt  FederalizationApi.cpp  FederalizationApi.hpp  FederalizationPlugin.hpp  LocalCluster.cpp  MessageService.cpp  MessageService.hpp  PluginsLoader.cpp  PluginsLoader.hpp  ServerDhLayer.cpp  ServerRpcLayer.cpp  TelegramServer.cpp  main.cpp
server/RpcOperations/: ContactsOperationFactory.cpp
server/plugins/xmpp-federation/: CMakeLists.txt  TelegramXmppServerExtension.cpp  TelegramXmppServerExtension.hpp  XmppFederation.cpp  XmppFederation.hpp  XmppUser.cpp  XmppUser.hpp
server/xmpp/: CMakeLists.txt  TelegramXmppServerExtension.cpp  TelegramXmppServerExtension.hpp  XmppFederation.cpp  XmppFederation.hpp  XmppPlugin.cpp  XmppUser.cpp  XmppUser.hpp
tests/manual/server/: CMakeLists.txt  main.cpp
tests/tst_MessagesApi/: tst_MessagesApi.cpp
